# opengl-project

./: .gitignore  CMakeLists.txt  LICENSE  cube
common/: platform_linux.cpp
resources/: fragment-shader.txt
source/: main.cpp  main_test.cpp
source/tdogl/: List_logo.cpp  List_logo.h  Model.h  logo.cpp  logo.h  render.h  ultility.h
